<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayGreen"
            android:textSize="30sp"
            android:text="@string/home_of_recipe"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/textView"
            android:layout_marginTop="60dp"
            app:layout_constraintHorizontal_bias="0.497"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayGreen"
            android:textSize="26sp"
            android:text="@string/click_here_to_continue"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:id="@+id/textView2"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="4dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="60dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="4dp"
            android:inputType="textPassword"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_bias="0.0"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#000"
            android:background="#fff"
            android:textSize="20sp"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="156dp"
            android:layout_height="56dp"
            app:srcCompat="@drawable/breakfastus"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="113dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>